<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.characterDetails.CharacterDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/gray"
            app:contentScrim="@color/gray"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/character_details_image_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:contentInsetStart="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/character_details_back_constraintlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:id="@+id/character_details_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/back_shadow"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/character_details_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/character_details_description_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/light_red"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_name_textview" />

            <TextView
                android:id="@+id/character_details_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_description_label_textview" />

            <TextView
                android:id="@+id/character_details_comics_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comics"
                android:layout_marginTop="16dp"
                android:textColor="@color/light_red"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_description_textview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_details_comics_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_comics_label_textview" />

            <TextView
                android:id="@+id/character_details_events_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:layout_marginTop="16dp"
                android:textColor="@color/light_red"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_comics_recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_details_events_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_events_label_textview" />

            <TextView
                android:id="@+id/character_details_series_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:layout_marginTop="16dp"
                android:textColor="@color/light_red"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_events_recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_details_series_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_series_label_textview" />

            <TextView
                android:id="@+id/character_details_stories_label_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stories"
                android:textColor="@color/light_red"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_series_recyclerview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_details_stories_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_stories_label_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>